--- a/src/containers/Mine/index.less
+++ b/src/containers/Mine/index.less
@@ -1,3 +1,17 @@
-.item_my{
+.main_modul {
+  margin-top: 43px;
+  .item_icon {
     text-align: center;
+    margin-top: 30px;padding:30px;
+    .icon {
+      width: 20%;
+      border-radius: 50%;
+    }
+    .text {
+      margin: 10px 0;
+    }
+  }
+  .item_my {
+    text-align: center;
+  }
 }
