--- a/src/containers/Nav/index.less
+++ b/src/containers/Nav/index.less
@@ -1,12 +1,13 @@
 .Navs {
   width: 100%;
   line-height: 43px;
+  position: fixed;z-index: 9999;top:0;left: 0;
   li {
     width: 50%;
     text-align: center;
     font-size: 18px;
     float: left;
-    border-bottom: 1px solid #1ba2e6;
+    border-bottom: 1px solid #1ba2e6;background:#fff;
   }
   .active {
     border-bottom: 5px solid #1ba2e6;
