--- a/src/containers/Mine/index.less
+++ b/src/containers/Mine/index.less
@@ -1,3 +1,13 @@
-.item_my{
+.mine_modul {
+  margin-top: 43px;
+  .mine_icon{
+    padding:20px;text-align: center;
+    .icon{
+      border-radius: 50%;width:20%;
+    }
+    .text{font-size: 16px;font-weight: 600;margin: 10px 0;}
+  }
+  .item_my {
     text-align: center;
+  }
 }
