--- a/src/containers/Nav/index.less
+++ b/src/containers/Nav/index.less
@@ -1,11 +1,14 @@
 .Navs {
   width: 100%;
+  position: fixed;
   line-height: 43px;
+  left: 0;top:0;z-index: 99;
   li {
     width: 50%;
     text-align: center;
     font-size: 18px;
     float: left;
+    background: #fff;
     border-bottom: 1px solid #1ba2e6;
   }
   .active {
